--- a/common/config/Code/User/settings.json
+++ b/common/config/Code/User/settings.json
@@ -1,6 +1,18 @@
 {
-    "editor.fontSize": 14,
-    "editor.fontFamily": "NasuM",
-    "workbench.colorTheme": "Hybrid Next",
-    "workbench.iconTheme": "vscode-icons"
+  "editor.fontSize": 14,
+  "editor.fontFamily": "NasuM",
+  "workbench.colorTheme": "Hybrid Next",
+  "workbench.iconTheme": "vscode-icons",
+  "editor.tabSize": 2,
+  "vim.insertModeKeyBindings": [
+    {
+      "before": [
+        "j",
+        "j"
+      ],
+      "after": [
+        "<Esc>"
+      ]
+    }
+  ],
 }
