--- a/arch/config/termite/config
+++ b/arch/config/termite/config
@@ -43,7 +43,7 @@ scrollback_lines = 10000
 foreground      = #c5c8c6
 foreground_bold = #c5c8c6
 cursor          = #c5c8c6
-background      = rgba(36, 46, 51, 0.9) # #242e33
+background      = rgba(36, 46, 51, 0.8)
 
 # Black
 color0  = #242e33
