:gear: use rofi

--- a/arch/config/compton.conf
+++ b/arch/config/compton.conf
@@ -89,8 +89,7 @@ shadow-exclude = [
     "name = 'xfce4-notifyd'",
     "name *= 'VLC'",
     "name *= 'compton'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
+    "name *= 'rofi'",
     "class_g = 'Conky'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
@@ -151,7 +150,7 @@ fade-out-step = 0.03;
 # no-fading-openclose = true;
 
 # Specify a list of conditions of windows that should not be faded.
-fade-exclude = [ ];
+fade-exclude = [];
 
 #################################
 #
