--- a/arch/config/i3/config
+++ b/arch/config/i3/config
@@ -63,10 +63,9 @@ bindsym $mod+Shift+c kill
 
 # start rofi(a anything like interface)
 bindsym $mod+p exec --no-startup-id "fish $XDG_CONFIG_HOME/i3/anything.fish"
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+
+# emoji
+bindsym $mod+g exec --no-startup-id "fish $XDG_CONFIG_HOME/i3/emoji.fish"
 
 # change focus
 bindsym $mod+h focus left
