:wrench: use ttf-font-icons

--- a/arch/config/fontconfig/fonts.conf
+++ b/arch/config/fontconfig/fonts.conf
@@ -15,6 +15,7 @@
 	<match>
 		<edit mode="prepend" name="family">
 			<string>Noto Sans CJK</string>
+			<string>Icons</string>
 			<string>Noto Color Emoji</string>
 			<string>Nasu</string>
 		</edit>
@@ -25,6 +26,7 @@
 		<test qual="any" name="family"><string>sans-serif</string></test>
 		<edit mode="prepend" name="family">
 			<string>Noto Sans CJK</string>
+			<string>Icons</string>
 			<string>Noto Color Emoji</string>
 			<string>Nasu</string>
 		</edit>
@@ -36,6 +38,7 @@
 		<test qual="any" name="family"><string>serif</string></test>
 		<edit mode="prepend" name="family">
 			<string>Noto Serif CJK</string>
+			<string>Icons</string>
 			<string>Noto Color Emoji</string>
 			<string>Noto Serif</string>
 		</edit>
@@ -46,6 +49,7 @@
 		<test qual="any" name="family"><string>monospace</string></test>
 		<edit mode="prepend" name="family">
 			<string>Noto Sans Mono CJK</string>
+			<string>Icons</string>
 			<string>Noto Color Emoji</string>
 			<string>NasuM</string>
 		</edit>
