--- a/arch/config/i3/config
+++ b/arch/config/i3/config
@@ -32,6 +32,7 @@ assign [class="^Vivaldi"] 2
 assign [class="^Franz"] 3
 
 # Startups
+exec_always --no-startup-id "fish $XDG_CONFIG_HOME/i3/polybar.fish"
 exec --no-startup-id vivaldi-stable
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -141,7 +142,7 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
-# reload the configuration file
+# reload the configuration fil
 bindsym $mod+Shift+q reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
@@ -174,15 +175,3 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-	status_command py3status
-	position top
-	font -misc-fixed-midium-r-normal--13-120-75-75-C-70-iso-10646-1
-	font pango:FontAwesome,Noto Sans UI Bold 13
-	separator_symbol ":|:"
-
-	strip_workspace_numbers yes
-}
