Revert ":wrench: use ttf-font-icons"
This reverts commit c5b6890d2d9bccd6e93112b2c51cbb2da3344a2d.

--- a/common/config/Code/User/settings.json
+++ b/common/config/Code/User/settings.json
@@ -1,6 +1,6 @@
 {
   "editor.fontSize": 14,
-  "editor.fontFamily": "NasuM, 'Icons'",
+  "editor.fontFamily": "NasuM",
   "workbench.colorTheme": "Hybrid Next",
   "workbench.iconTheme": "vscode-icons",
   "editor.tabSize": 2,
