--- a/arch/config/i3/config
+++ b/arch/config/i3/config
@@ -20,16 +20,28 @@ smart_gaps on
 # Borders
 smart_borders no_gaps
 
+# workspaces
+set $WS1 1:
+set $WS2 2:
+set $WS3 3
+set $WS4 4
+set $WS5 5
+set $WS6 6
+set $WS7 7
+set $WS8 8
+set $WS9 9
+set $WS0 10
+
 # Key binds
 bindsym Print exec --no-startup-id "fish $XDG_CONFIG_HOME/i3/shot_all.fish"
 bindsym $mod+Print exec --no-startup-id "fish $XDG_CONFIG_HOME/i3/shot_rectangle.fish"
 
 # Assigns
-workspace 1 output HDMI-0
-workspace 2 output DVI-D-0
-workspace 3 output DVI-D-0
-assign [class="^Vivaldi"] 2
-assign [class="^Franz"] 3
+workspace $WS1 output HDMI-0
+workspace $WS2 output DVI-D-0
+workspace $WS3 output DVI-D-0
+assign [class="^Vivaldi"] $WS2
+assign [class="^Franz"] $WS3
 
 # Startups
 exec_always --no-startup-id "fish $XDG_CONFIG_HOME/i3/polybar.fish"
@@ -119,28 +131,28 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace $WS1
+bindsym $mod+2 workspace $WS2
+bindsym $mod+3 workspace $WS3
+bindsym $mod+4 workspace $WS4
+bindsym $mod+5 workspace $WS5
+bindsym $mod+6 workspace $WS6
+bindsym $mod+7 workspace $WS7
+bindsym $mod+8 workspace $WS8
+bindsym $mod+9 workspace $WS9
+bindsym $mod+0 workspace $WS0
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace $WS1
+bindsym $mod+Shift+2 move container to workspace $WS2
+bindsym $mod+Shift+3 move container to workspace $WS3
+bindsym $mod+Shift+4 move container to workspace $WS4
+bindsym $mod+Shift+5 move container to workspace $WS5
+bindsym $mod+Shift+6 move container to workspace $WS6
+bindsym $mod+Shift+7 move container to workspace $WS7
+bindsym $mod+Shift+8 move container to workspace $WS8
+bindsym $mod+Shift+9 move container to workspace $WS9
+bindsym $mod+Shift+0 move container to workspace $WS0
 
 # reload the configuration fil
 bindsym $mod+Shift+q reload
