--- a/arch/config/polybar/config
+++ b/arch/config/polybar/config
@@ -62,8 +62,9 @@ module-margin-left = 1
 module-margin-right = 2
 
 font-0 = Noto Sans UI:size=12:weight=bold
-font-1 = Icons:size=14:weight=bold
-font-2 = Noto Color Emoji:size=12
+font-1 = FontAwesome 5 Free:style=solid:size=14
+font-2 = FontAwesome 5 Brands:style=Regular:size=14
+font-3 = Noto Color Emoji:size=12
 
 modules-left = i3
 modules-center = 
@@ -127,17 +128,17 @@ label-mode-foreground = ${colors.foreground}
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%
+label-focused = %name%
 label-focused-background = #555
 label-focused-underline = ${colors.primary}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+label-unfocused = %name%
 label-unfocused-padding = 2
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
+label-visible = %name%
 label-visible-background = ${colors.background-alt}
 label-visible-underline = ${colors.secondary}
 label-visible-padding = ${self.label-focused-padding}
