--- a/common/config/Code/User/settings.json
+++ b/common/config/Code/User/settings.json
@@ -36,4 +36,12 @@
       ]
     }
   ],
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    {
+      "autoFix": true,
+      "language": "vue"
+    }
+  ],
 }
